[package]
name          = "no_alloc"
version       = "0.1.0"
authors       = ["Richard Berry <rjsberry@pm.me>"]
license       = "Unlicense/0BSD"
description   = "Embedded friendly pointer types for applications without heap allocators"
documentation = "https://docs.rs/no_alloc"
homepage      = "https://github.com/rjsberry/no_alloc"
repository    = "https://github.com/rjsberry/no_alloc"
categories    = ["no-std"]
exclude       = ["ci", "san"]
readme        = "README.md"
edition       = "2018"

[workspace]
members = ["san"]

[features]
default = []
coerce_unsized = []
const_generics = []

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
